Fixed width, but it's not responsive anymore:(

--- a/static/style.css
+++ b/static/style.css
@@ -83,9 +83,16 @@ body {
 }
 
 .chart-content {
-  padding: 0rem 1rem;
+  padding: 1rem 1rem 2rem 1rem;
   background-color: white;
-  /*border: 5px red solid;*/
+  box-sizing: border-box;
+}
+
+.wordcloud-image img, .waffle-chart img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
 }
 
 .info-button {
